--- a/05_CRUD_Vista_JSTL/web/restClient.html
+++ b/05_CRUD_Vista_JSTL/web/restClient.html
@@ -29,7 +29,9 @@ and open the template in the editor.
             <input id="age" name="age" type="number" placeholder="Write your age"
                    size="10" maxlength="3" required="required" min="1" max="199"/><br/>
             
-            <input id="btnPost" type="submit" value="Register please!!! En un plis"/>
+            <input id="btnPost" type="submit" value="Register"/>
+            <input id="btnPut" type="submit" value="Update"/>
+            <input id="btnDelete" type="submit" value="Delete"/>
         </form>
         <table id="data_table"></table>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
